--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "typescript": "~3.2.2",
     "vue-template-compiler": "^2.5.21"
   }
